day 006 added JS interactivity

--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -265,7 +265,7 @@ a {
   background-repeat: no-repeat;
 }
 
-.selfcare {
+.self {
   background: url("../app/images/icon-self-care.svg");
   background-color: #f1c65b;
   background-position: 93% -10px;
